# learning-opencl

./: .gitignore  CMakeLists.txt  README.md
include/: cl_utils.hpp
src/: cl_utils.cpp  hello.cl  hello_world.cpp  intro.cpp
